# DirectFB-media-samples

./: AUTHORS  ChangeLog  INSTALL  NEWS  README  meson.build
data/: IM.avif  IM.dfiff  IM.exr  IM.jp2  IM.jxl  IM.m2v  IM.tiff  dfblogo.h  fishing.swf  tinylogo.h
src/: df_databuffer.c  df_font_sample.c  df_fonts_sample.c  df_image_sample.c  df_video_sample.c  fs_music_sample.c  meson.build
